crates/fittle-cli/tests/snapshots/corpus__malformed__duplicate-keys.fit.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "file_bytes": 11520,
  "hdus": [
    {
      "bitpix": 16,
      "cards": [
        {
          "comment": "conforms to FITS standard",
          "keyword": "SIMPLE",
          "raw": [
            "SIMPLE  =                    T / conforms to FITS standard                      "
          ],
          "record": 0,
          "type": "logical",
          "value": true
        },
        {
          "comment": "array data type",
          "keyword": "BITPIX",
          "raw": [
            "BITPIX  =                   16 / array data type                                "
          ],
          "record": 1,
          "type": "integer",
          "value": 16
        },
        {
          "comment": "number of array dimensions",
          "keyword": "NAXIS",
          "raw": [
            "NAXIS   =                    2 / number of array dimensions                     "
          ],
          "record": 2,
          "type": "integer",
          "value": 2
        },
        {
          "keyword": "NAXIS1",
          "raw": [
            "NAXIS1  =                   64                                                  "
          ],
          "record": 3,
          "type": "integer",
          "value": 64
        },
        {
          "keyword": "NAXIS2",
          "raw": [
            "NAXIS2  =                   48                                                  "
          ],
          "record": 4,
          "type": "integer",
          "value": 48
        },
        {
          "keyword": "OBJECT",
          "raw": [
            "OBJECT  = 'M 101   '                                                            "
          ],
          "record": 5,
          "type": "string",
          "value": "M 101"
        },
        {
          "keyword": "GAIN",
          "raw": [
            "GAIN    =                  100                                                  "
          ],
          "record": 6,
          "type": "integer",
          "value": 100
        },
        {
          "keyword": "EXPTIME",
          "raw": [
            "EXPTIME =                120.0                                                  "
          ],
          "record": 7,
          "type": "float",
          "value": 120.0
        },
        {
          "keyword": "GAIN",
          "raw": [
            "GAIN    =                  120                                                  "
          ],
          "record": 8,
          "type": "integer",
          "value": 120
        },
        {
          "keyword": "BSCALE",
          "raw": [
            "BSCALE  =                    1                                                  "
          ],
          "record": 9,
          "type": "integer",
          "value": 1
        },
        {
          "keyword": "BZERO",
          "raw": [
            "BZERO   =                32768                                                  "
          ],
          "record": 10,
          "type": "integer",
          "value": 32768
        }
      ],
      "data_bytes": 6144,
      "data_offset": 2880,
      "header_blocks": 1,
      "header_offset": 0,
      "index": 0,
      "kind": "primary",
      "shape": [
        64,
        48
      ]
    }
  ],
  "issues": [
    {
      "code": "duplicate_keyword",
      "hdu": 0,
      "message": "GAIN appears more than once (first at record 6)",
      "record": 8,
      "severity": "warning"
    }
  ],
  "path": "malformed/duplicate-keys.fit",
  "schema": "fittle.header/1"
}
