crates/fittle-cli/tests/snapshots/corpus__malformed__nonstandard-cards.fit.snap
---
source: crates/fittle-cli/tests/corpus.rs
expression: json
---
{
  "file_bytes": 11520,
  "hdus": [
    {
      "bitpix": 16,
      "cards": [
        {
          "comment": "conforms to FITS standard",
          "keyword": "SIMPLE",
          "raw": [
            "SIMPLE  =                    T / conforms to FITS standard                      "
          ],
          "record": 0,
          "type": "logical",
          "value": true
        },
        {
          "comment": "array data type",
          "keyword": "BITPIX",
          "raw": [
            "BITPIX  =                   16 / array data type                                "
          ],
          "record": 1,
          "type": "integer",
          "value": 16
        },
        {
          "comment": "number of array dimensions",
          "keyword": "NAXIS",
          "raw": [
            "NAXIS   =                    2 / number of array dimensions                     "
          ],
          "record": 2,
          "type": "integer",
          "value": 2
        },
        {
          "keyword": "NAXIS1",
          "raw": [
            "NAXIS1  =                   64                                                  "
          ],
          "record": 3,
          "type": "integer",
          "value": 64
        },
        {
          "keyword": "NAXIS2",
          "raw": [
            "NAXIS2  =                   48                                                  "
          ],
          "record": 4,
          "type": "integer",
          "value": 48
        },
        {
          "comment": "unquoted string",
          "keyword": "OBJECT",
          "raw": [
            "OBJECT  = M 33 / unquoted string                                                "
          ],
          "record": 5,
          "type": "unparsed",
          "value": "M 33"
        },
        {
          "keyword": "filter",
          "raw": [
            "filter  = 'Ha'                                                                  "
          ],
          "record": 6,
          "type": "string",
          "value": "Ha"
        },
        {
          "keyword": "OBSERVER",
          "raw": [
            "OBSERVER= 'Ren?e'                                                               "
          ],
          "record": 7,
          "type": "string",
          "value": "Ren?e"
        },
        {
          "keyword": "BSCALE",
          "raw": [
            "BSCALE  =                    1                                                  "
          ],
          "record": 8,
          "type": "integer",
          "value": 1
        },
        {
          "keyword": "BZERO",
          "raw": [
            "BZERO   =                32768                                                  "
          ],
          "record": 9,
          "type": "integer",
          "value": 32768
        }
      ],
      "data_bytes": 6144,
      "data_offset": 2880,
      "header_blocks": 1,
      "header_offset": 0,
      "index": 0,
      "kind": "primary",
      "shape": [
        64,
        48
      ]
    }
  ],
  "issues": [
    {
      "code": "invalid_value",
      "hdu": 0,
      "message": "OBJECT: value \"M 33\" is not a valid FITS value",
      "record": 5,
      "severity": "warning"
    },
    {
      "code": "invalid_keyword",
      "hdu": 0,
      "message": "keyword \"filter\" has characters outside A-Z 0-9 - _",
      "record": 6,
      "severity": "warning"
    },
    {
      "code": "non_ascii",
      "hdu": 0,
      "message": "record contains bytes outside printable ASCII",
      "record": 7,
      "severity": "warning"
    }
  ],
  "path": "malformed/nonstandard-cards.fit",
  "schema": "fittle.header/1"
}
